<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.party.main.MainActivity"
        android:background="@drawable/background">


    <ImageView
            android:src="@drawable/logo"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp" android:layout_marginTop="96dp" android:adjustViewBounds="true"
            android:layout_marginStart="64dp" android:layout_marginEnd="64dp"
            android:contentDescription="@string/logo_desc"/>

    <Button
            android:id="@+id/host_party"
            android:text="@string/host_party_main"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="136dp"
            android:background="@drawable/round_button_active"
            android:fontFamily="@font/raleway_semi_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" android:layout_marginStart="64dp" android:layout_marginEnd="64dp"/>

    <Button
            android:id="@+id/join_party"
            android:text="@string/join_party_main"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/host_party"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_button_highlight"
            android:fontFamily="@font/raleway_semi_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content" android:layout_marginStart="64dp" android:layout_marginEnd="64dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>